[gd_scene load_steps=2 format=2]

[ext_resource path="res://scrips_scenes/utils/hit_system/Hurtbox.gd" type="Script" id=1]

[node name="Area2D" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 0 )

[node name="Timer" type="Timer" parent="."]

[connection signal="is_invincible" from="." to="." method="_on_Area2D_is_invincible"]
[connection signal="not_invincible" from="." to="." method="_on_Area2D_not_invincible"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
